--- a/public/css/main.css
+++ b/public/css/main.css
@@ -421,4 +421,42 @@ nav a:hover {
     h3 {
         page-break-after: avoid;
     }
+
+    /* ==========================================================================
+       d3 styles
+       ========================================================================== */
+
+
+    .link {
+      stroke: #777;
+      stroke-opacity: 0.3;
+      stroke-width: 1.5px;
+    }
+
+    .node circle {
+      fill: #ccc;
+      stroke: #000;
+      stroke-width: 1.5px;
+    }
+
+    .node text {
+      display: none;
+      font: 10px sans-serif;
+    }
+
+    .node:hover circle {
+      fill: #000;
+    }
+
+    .node:hover text {
+      display: inline;
+    }
+
+    .cell {
+      fill: none;
+      pointer-events: all;
+    }
+
+
+
 }
