removed one horrible semicolon and some minor cleanup

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,7 @@
 
 html {
     color: black;
+    background-color: inherit;
     font-size: 1em;
     line-height: 1.4;
 }
@@ -57,7 +58,7 @@ textarea {
    ========================================================================== */
 
 body {
-    font: 10px/14px Helvetica, Helvetica Neue, Arial;
+    font: 10px/14px "Helvetica", "Helvetica Neue", "Arial";
 }
 
 .wrapper {
@@ -223,6 +224,10 @@ nav a:hover {
      max-width: 100%;
    }
 
+   .button button {
+     padding: 15px 15px 15px 15px;
+   }
+
 
 
 
@@ -286,9 +291,9 @@ nav a:hover {
 
     .header-container,
     .main aside {
-        -webkit-box-shadow: 0 5px 10px #aaa;
-           -moz-box-shadow: 0 5px 10px #aaa;
-                box-shadow: 0 5px 10px #aaa;
+        -webkit-box-shadow: 0 0px 0px #aaa;
+           -moz-box-shadow: 0 0px 0px #aaa;
+                box-shadow: 0 0px 0px #aaa;
     }
 
 /* ============
