--- a/public/css/main.css
+++ b/public/css/main.css
@@ -312,16 +312,35 @@ nav a:hover {
     background-color: transparent;
    }
 
+  .zoomButtons button:hover, .modalButtons button:hover {
+    background-color: transparent;
+  }
+
   #zoom-in {
     background-image: url(/img/zoom-in.svg);
+  }
+
+  #zoom-in:hover {
+    background-image: url(/img/zoom-in-hover.svg);
   }
 
   #zoom-out {
     background-image: url(/img/zoom-out.svg);
   }
 
+  #zoom-out:hover {
+    background-image: url(/img/zoom-out-hover.svg);
+  }
+
   #reset-button {
     background-image: url(/img/reload.svg);
+    background-size: 75%;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  #reset-button:hover {
+    background-image: url(/img/reload-hover.svg);
     background-size: 75%;
     background-repeat: no-repeat;
     background-position: center;
