--- a/public/css/main.css
+++ b/public/css/main.css
@@ -263,10 +263,12 @@ nav a {
     opacity: 1;
   }
 
+  /* I put the *about* svg in place so you can see that it doesn't work */
   #aboutBtn {
     background-image: url(/img/about.svg);
   }
 
+  /* I left the file below wrong on purpose to show that the *zoom-out* svg works perfectly */
   #settingsBtn {
     background-image: url(/img/zoom-out.svg);
   }
