--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,7 +59,10 @@ textarea {
 body {
     font: 10px/14px "Helvetica", "Helvetica Neue", "Arial";
     line-height: 1.8;
-    background-image: url(/img/common-background.png);
+    /* background-image: url(/img/common-background.png); */
+    background-position: 50% -50%;
+    background-size: 30%;
+    background-repeat: no-repeat;
 }
 
 .wrapper {
