--- a/public/css/main.css
+++ b/public/css/main.css
@@ -107,7 +107,7 @@ nav a {
    ============== */
 
 .main {
-    padding: 30px 0;
+    padding: 10px 0;
 }
 
 /* The Modal (background) */
@@ -313,6 +313,10 @@ nav a {
     background-size: 95%;
     background-repeat: no-repeat;
     background-position: center;
+    border: solid 5px yellow;
+    border-radius: 50%;
+    width: 5em;
+    height: 5em;
 
   }
 
